--- a/src/css/login.css
+++ b/src/css/login.css
@@ -15,8 +15,8 @@
   height:100vh;
 }
 
-.input {
-  box-shadow: 1px 2px black;
+.input, .select {
+  box-shadow: 5px 3px 3px 1px rgba(0, 0, 0, 0.6);
 }
 
 .fa-wallet {
