--- a/src/css/wallet.css
+++ b/src/css/wallet.css
@@ -1,5 +1,9 @@
 .cabeca {
   display: flex;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  flex-wrap: wrap;
   align-items: center;
   justify-content:space-between;
   background-color: #598C58;
@@ -24,6 +28,9 @@
 }
 
 .main {
+  display: flex;
+  position: fixed;
+  top: 12vh;
   background-color: #DDE8B3;
 }
 
@@ -51,6 +58,38 @@
   font-weight: bold;
 }
 
-.fa-circle-dollar-to-slot {
+.fa-circle-dollar-to-slot, .fa-trash, .fa-pen-to-square {
   margin-right: 20px;
+}
+
+.tableMain {
+  display: flex;
+  position: absolute;
+  top: 35vh;
+  z-index: -1;
+  justify-content: center;
+  background-color: #63734A;
+  box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.6);
+  width: 99%;
+  margin: 20px 5px;
+  overflow-x: scroll;
+}
+
+.tableMain td {
+  min-width: 50px;
+}
+
+.tableHeader {
+  color: greenyellow;
+  background-color: #63734A;
+  width: 100%;
+}
+
+.tableHeader tr th {
+  color: greenyellow;
+}
+
+.btnShadow{
+  margin: 0 2px;
+  box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.6);
 }
