--- a/src/css/wallet.css
+++ b/src/css/wallet.css
@@ -10,6 +10,7 @@
   color: white;
   font-size: x-large;
   padding: 10px;
+  border: 3px inset black;
 }
 
 .walletTitle {
@@ -25,6 +26,8 @@
 .total {
   font-family: 'quentin';
   font-weight:lighter;
+  font-size: larger;
+  /* color: ; */
 }
 
 .main {
@@ -32,6 +35,11 @@
   position: fixed;
   top: 12vh;
   background-color: #DDE8B3;
+  overflow-x: scroll;
+  border-bottom: 3px inset black;
+  border-left: 2px inset black;
+  border-right: 2px inset black;
+  border-top: 4px double greenyellow;
 }
 
 .mainForm {
@@ -41,12 +49,12 @@
 }
 
 .mainForm label {
-  margin-right: 8px;
+  margin-right: 15px;
   display: flex;
 }
 
 .mainForm input, .mainForm select {
-  margin-left: 2px;
+  margin-left: 5px;
 }
 
 /* .select {
@@ -63,7 +71,6 @@
 }
 
 .tableMain {
-  display: flex;
   position: absolute;
   top: 35vh;
   z-index: -1;
@@ -83,6 +90,7 @@
 
 .coin {
   font-family: 'quentin';
+  font-size: larger;
 }
 
 .tableHeader {
@@ -98,4 +106,12 @@
 .btnShadow{
   margin: 0 2px;
   box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.6);
+}
+
+.btnDw, .btnUp {
+  height: 15px;
+}
+
+.btnDw {
+  margin-left: 8px;
 }
