--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,15 @@
   src: url('./css/fontes/Playball-q6o1.ttf');
 }
 
+/* .body {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  font-size: calc(10px + 2vmin);
+  justify-content: center;
+  min-height: 100vh;
+} */
+
 
 .fontTitle {
   font-family: 'colege';
