--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,13 +1,8 @@
-.myTitle {
-  font-weight: lighter;
-  font-size: xxx-large;
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
 .formTitle {
   display: flex;
+  position: absolute;
+  top: 0;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -15,8 +10,24 @@
   height:100vh;
 }
 
+.myTitle {
+  font-weight: lighter;
+  font-size: 5vw;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.walletImg{
+  width: 7vw;
+}
+
 .input, .select {
   box-shadow: 5px 3px 3px 1px rgba(0, 0, 0, 0.6);
+}
+
+.input {
+  width: 20vw;
 }
 
 .button.is-dark.is-outlined {
